[package]
name = "flat_commands"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ecs", "games"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/flat_commands"
readme = "README.md"
description = "bevy ecs extension traits"

[dependencies]
bevy = { version = "0.8.0", default-features = false }

[dev-dependencies]
bevy = "0.8.0"